commit resolved from PR comments from Gauravi
