# handlers/signInHandler.go
@@ -14,35 +14,26 @@ import (
 // @Accept json
 // @Produce json
 // @Param credentials body models.SignInCredentials true "User credentials for sign-in"
-// @Success 200 {object} SuccessResponse "Authentication successful"
-// @Failure 400 {object} ErrorResponse "Invalid credentials or error message"
+// @Success 200 {object} models.SuccessResponse "Authentication successful"
+// @Failure 400 {object} models.ErrorResponse "Invalid credentials or error message"
 // @Router /signin [post]
+
 func SignInHandler(signInService *service.SignInService) gin.HandlerFunc {
 	return func(context *gin.Context) {
 		var userCredentials models.SignInCredentials
 
 		// Binding the body of the incoming POST request
 		if err := context.ShouldBindJSON(&userCredentials); err != nil {
-			context.JSON(http.StatusBadRequest, ErrorResponse{Error: constants.ErrInBindingData.Error()})
+			context.JSON(http.StatusBadRequest, models.ErrorResponse{Error: constants.ErrInBindingData.Error()})
 			return
 		}
 
 		// Call the SignInValidations method to validate user credentials
 		if err := signInService.SignInValidations(userCredentials); err != nil {
-			context.JSON(http.StatusBadRequest, ErrorResponse{Error: "Invalid credentials, please try again"})
+			context.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "Invalid credentials, please try again"})
 			return
 		}
 
-		context.JSON(http.StatusOK, SuccessResponse{Message: "Authentication successful"})
+		context.JSON(http.StatusOK, models.SuccessResponse{Message: "Authentication successful"})
 	}
-}
-
-// SuccessResponse represents a successful response format.
-type SuccessResponse struct {
-	Message string `json:"message"`
-}
-
-// ErrorResponse represents an error response format.
-type ErrorResponse struct {
-	Error string `json:"error"`
 }
