# models/signInModel.go
@@ -2,8 +2,8 @@ package models
 
 // SignInCredentials represents the structure of user sign-in credentials.
 type SignInCredentials struct {
-	Name     string `gorm:"column:name;primaryKey" json:"userName" validate:"required,alpha"`
-	Password string `gorm:"column:password" json:"userPassword" validate:"required,alphanum,min=8"`
+	Name     string `gorm:"column:name;primaryKey" json:"userName" validate:"required,alpha" example:"Username"`
+	Password string `gorm:"column:password" json:"userPassword" validate:"required,alphanum,min=8" example:"userPassword"`
 }
 
 // TableName sets the table name for SignInCredentials explicitly.
